@@ -1,12 +1,20 @@
 package com.xiaotao.saltedfishcloud.utils;
 
+import com.xiaotao.saltedfishcloud.common.ResponseResource;
+import org.springframework.core.io.AbstractResource;
+import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
 import org.springframework.http.ResponseEntity;
+import org.springframework.util.StreamUtils;
 
-import java.io.UnsupportedEncodingException;
+import java.io.*;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Optional;
 
 public class ResourceUtils {
     public static class Header {
@@ -14,7 +22,7 @@ public class ResourceUtils {
     }
     // 默认的一年缓存响应
     private static final Map<String, String> DEFAULT_CACHE_MAP = new HashMap<String, String>(){{
-        put("Cache-Control", "max-age=" + 60*60*24*365);
+        put("Cache-Control", "max-age=" + 60*60*24*7);
     }};
 
     /**
@@ -26,16 +34,31 @@ public class ResourceUtils {
     }
 
     /**
+     * 读取资源数据保存到本地文件系统
+     * @param resource  待保存的资源
+     * @param path      保存路径，若目录不存在则自动创建
+     */
+    public static void saveToFile(Resource resource, Path path) throws IOException {
+        FileUtils.createParentDirectory(path);
+        try (InputStream is = resource.getInputStream(); OutputStream os = Files.newOutputStream(path)) {
+            StreamUtils.copy(is, os);
+        }
+    }
+
+    /**
      * 将资源包装为HTTP响应
      * @param resource  资源
      * @param filename  文件名
      * @param extraHeaders  额外的响应头
      */
     public static ResponseEntity<Resource> wrapResource(Resource resource, String filename, Map<String, String> extraHeaders) throws UnsupportedEncodingException {
+        String ct = null;
+        if (resource instanceof ResponseResource) {
+            ct = ((ResponseResource) resource).getContentType();
+        }
         String disposition = generateContentDisposition(filename);
-        String ct = FileUtils.getContentType(filename);
         ResponseEntity.BodyBuilder builder = ResponseEntity.ok()
-                .header("Content-Type", ct)
+                .header("Content-Type", Optional.ofNullable(ct).orElseGet(() -> FileUtils.getContentType(filename)))
                 .header("Content-Disposition", disposition);
         if (extraHeaders != null) {
             for (Map.Entry<String, String> e : extraHeaders.entrySet()) {
@@ -66,6 +89,33 @@ public class ResourceUtils {
 
 
     public static String generateContentDisposition(String filename) throws UnsupportedEncodingException {
-        return "inline;filename*=UTF-8''"+ URLEncoder.encode(filename, "utf-8").replaceAll("\\+", "%20");
+        return "inline;filename*=UTF-8''"+ URLEncoder.encode(filename, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+    }
+
+    /**
+     * 生成一个字符串资源
+     * @param string    要封装的字符串
+     */
+    public static ResponseResource stringToResource(String string) {
+        return new ResponseResource() {
+            @Override
+            public String getDescription() {
+                return "StringResource";
+            }
+
+            @Override
+            public InputStream getInputStream() throws IOException {
+                return new ByteArrayInputStream(string.getBytes(StandardCharsets.UTF_8));
+            }
+        };
+    }
+
+    /**
+     * 读取资源转为字符串
+     */
+    public static String resourceToString(Resource resource) throws IOException {
+        try (InputStream is = resource.getInputStream()) {
+            return StreamUtils.copyToString(is, StandardCharsets.UTF_8);
+        }
     }
 }
